# tree-sitter-gxl

./: .gitignore  Cargo.toml  README.md  grammar.js  package.json  tree-sitter.json
bindings/rust/: build.rs  lib.rs
examples/: test.gxl
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
